[package]
name = "mdbook-chess"
version = "0.2.2"
description = "An mdbook preprocessing plugin to generate chess boards"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["chess", "mdbook", "markdown"]
documentation = "https://docs.rs/mdbook-chess"
repository = "https://github.com/xd009642/mdbook-chess"
homepage = "https://github.com/xd009642/mdbook-chess"
edition = "2021"

[dependencies]
chess = "3.2.0"
clap = "3.2.16"
mdbook = "0.4.21"
pulldown-cmark = "0.9.2"
pulldown-cmark-to-cmark = "10.0.2"
semver = "1.0.13"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
serde_yaml = "0.9.4"
tracing = { version = "0.1.36", features = ["std"], default-features = false }
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "smallvec", "fmt", "ansi", "std"], default-features = false }
